--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <main>
         <section>
             <h2>Italo Chiaradia</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt doloribus reiciendis dolore veniam consectetur qui delectus minima enim nulla corrupti fugit aut magni illo amet, nam ut nemo ipsa esse?</p>
+            <p>Sou Italo Chiaradia, apaixonado por tecnologia e sempre em busca de aprendizado e evolução. Gosto de enfrentar desafios que me ajudam a crescer, tanto no lado profissional quanto pessoal. 🚀</p>
         </section>
         <section>
             <h2>Italo Chiaradia</h2>
