--- a/src/pagina-individual/italo-chiaradia/index.html
+++ b/src/pagina-individual/italo-chiaradia/index.html
@@ -15,26 +15,31 @@
         <section>
             <h2>Sobre mim</h2>
             <img src="/images/italo-chiaradia.jpg" alt="foto do italo chiaradia">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum, provident labore odio recusandae autem dicta aliquam enim delectus, temporibus voluptates eveniet! Suscipit consequuntur incidunt qui unde eaque voluptate repellendus pariatur!</p>
+            <p>
+                Sou Italo Chiaradia, alguém que está sempre aprendendo e buscando evoluir. Tenho um grande interesse por tecnologia, redes de computadores e segurança da informação, mas também gosto de explorar diferentes áreas do conhecimento.  
+            </p>
+            <p>
+                Acredito na importância da disciplina e do aprimoramento constante, tanto na vida profissional quanto pessoal. Gosto de desafios que me fazem crescer e estou sempre aberto a novas perspectivas. Seja estudando, programando ou simplesmente refletindo sobre o mundo, estou em busca de evolução. 🚀
+            </p>
         </section>
         <section>
             <h2>Hobbies: </h2>
             <ul>
-                <li>hobby 1</li>
-                <li>hobby 2</li>
-                <li>hobby 3</li>
-                <li>hobby 4</li>
-                <li>hobby 5</li>
+                <li>Ler</li>
+                <li>Jogar Futebol</li>
+                <li>Assistir Filmes</li>
+                <li>Jogar Xadrez</li>
+                <li>Estudar coisas novas</li>
             </ul>
         </section>
         <section>
             <h2>Top 5 filmes: </h2>
             <ol>
-                <li>Filme 1</li>
-                <li>Filme 2</li>
-                <li>Filme 3</li>
-                <li>Filme 4</li>
-                <li>Filme 5</li>
+                <li>Senhor dos anéis 1</li>
+                <li>Senhor dos anéis 2</li>
+                <li>Senhor dos anéis 3</li>
+                <li>Poderoso Chefão</li>
+                <li>Shrek 2</li>
             </ol>
         </section>
         <section>
