Feat: Pagina Italo

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Título</h1>
         <div>
-            Italo Chiaradia
+            Grupão
         </div>
     </header>
     <hr>
@@ -19,12 +19,15 @@
             <p>Sou Italo Chiaradia, apaixonado por tecnologia e sempre em busca de aprendizado e evolução. Gosto de enfrentar desafios que me ajudam a crescer, tanto no lado profissional quanto pessoal. 🚀</p>
         </section>
         <section>
-            <h2>Italo Chiaradia</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt doloribus reiciendis dolore veniam consectetur qui delectus minima enim nulla corrupti fugit aut magni illo amet, nam ut nemo ipsa esse?</p>
+            <h2>Italo Ferreira</h2>
+            <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar. Estou sempre em busca de evolução, tanto pessoal quanto profissional.</p>
         </section>
         <section>
             <h2>Páginas de cada membro: </h2>
             <a href="/src/pagina-individual/italo-chiaradia/index.html">Italo Chiaradia</a>
+            <br>
+            <a href="/src/pagina-individual/italo-ferreira/index.html">Italo Ferreira</a>
+            <br>
         </section>
     </main>
     <hr>
