modifica header pagina principal

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Título</h1>
-        <div>
-            Grupão
-        </div>
+        <h1>Nome do grupo</h1>
     </header>
     <hr>
     <main>
