--- a/src/members/italo-ferreira.html
+++ b/src/members/italo-ferreira.html
@@ -11,7 +11,7 @@
         <a href="/src/index.html">Voltar para página principal</a>
     </header>
     <main>
-        <img src="/images/imagemItalo.png" alt="foto" width="180px">
+        <img src="/images/italo-ferreira.png" alt="foto" width="180px">
         <section>
             <h2>Sobre mim</h2>
             <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar.</p>
@@ -50,7 +50,7 @@
     <footer>
         <a href="https://github.com/Rarkunho" target="_blank">Meu GitHub</a><br>
         <a href="https://itch.io/profile/rarkunho">Minha página no Itch.io</a><br>
-        <a href="/src/pagina-individual/italo-ferreira/contato.html">Entre em contato</a>
+        <a href="/src/members/contacts/italo-ferreira.html">Entre em contato</a>
     </footer>
 </body>
 </html>
