--- a/src/members/contacts/italo-chiaradia.html
+++ b/src/members/contacts/italo-chiaradia.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Italo Ferreira - Contato</title>
+    <title>Título | Entre em contato</title>
 </head>
 <body>
     <header>
-        <h1>Entre em Contato - Italo Ferreira</h1>
+        <h1>Contato - Italo Chiaradia</h1>
         <a href="/src/index.html">Voltar para página principal</a><br>
-        <a href="/src/pagina-individual/italo-ferreira/index.html">Voltar para página individual</a>
+        <a href="/src/members/italo-chiaradia.html">Voltar para página individual do membro</a>
     </header>
     <main>
         <form>
@@ -19,13 +19,11 @@
             <textarea name="message" placeholder="Mensagem"></textarea>
             <input type="submit" value="Enviar">
         </form>
-        <h2>Video Interessante:</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JcJSW7Rprio?si=petSPJowI0KgbFYB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/T-PWDHoJLAQ" frameborder="0" allowfullscreen></iframe>
     </main>
-    <hr>
     <footer>
-        <a href="https://github.com/Rarkunho" target="_blank">Meu GitHub</a><br>
-        
+        <a href="https://github.com/italo-ch" target="_blank">GitHub</a><br>
+        <a href="/src/index.html">Voltar para página inicial</a>
     </footer>
 </body>
 </html>
