--- a/src/members/italo-ferreira.html
+++ b/src/members/italo-ferreira.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Italo Ferreira</title>
+    <title>INnovators | Italo Ferreira</title>
 </head>
 <body>
     <header>
