modifica pagina de contato

--- a/src/members/contacts/italo-chiaradia.html
+++ b/src/members/contacts/italo-chiaradia.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <header>
-        <h1>Contato - Italo Chiaradia</h1>
+        <h1>Entre em contato - Italo Chiaradia</h1>
         <a href="/src/index.html">Voltar para página principal</a><br>
         <a href="/src/members/italo-chiaradia.html">Voltar para página individual do membro</a>
     </header>
+    <br>
     <main>
         <form>
             <input name="name" type="text" placeholder="Nome"><br>
@@ -21,6 +22,7 @@
         </form>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/T-PWDHoJLAQ" frameborder="0" allowfullscreen></iframe>
     </main>
+    <br>
     <footer>
         <a href="https://github.com/italo-ch" target="_blank">GitHub</a><br>
         <a href="/src/index.html">Voltar para página inicial</a>
