adiciona nome do grupo e slogan

--- a/src/members/contacts/italo-chiaradia.html
+++ b/src/members/contacts/italo-chiaradia.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título | Entre em contato</title>
+    <title>INnovators | Fale com Italo Chiaradia</title>
 </head>
 <body>
     <header>
-        <h1>Contato - Italo Chiaradia</h1>
+        <h1>Entre em Contato - Italo Chiaradia</h1>
         <a href="/src/index.html">Voltar para página principal</a><br>
         <a href="/src/members/italo-chiaradia.html">Voltar para página individual do membro</a>
     </header>
+    <hr>
     <main>
         <form>
             <input name="name" type="text" placeholder="Nome"><br>
@@ -21,6 +22,7 @@
         </form>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/T-PWDHoJLAQ" frameborder="0" allowfullscreen></iframe>
     </main>
+    <hr>
     <footer>
         <a href="https://github.com/italo-ch" target="_blank">GitHub</a><br>
         <a href="/src/index.html">Voltar para página inicial</a>
