adiciona descrição do grupo

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
     <hr>
     <main>
         <section>
+            <h2>Nosso grupo</h2>
+            <p>O <strong>INnovators</strong> é um grupo formado por jovens talentos apaixonados por tecnologia e inovação, com o objetivo de criar soluções criativas e impactantes. Com uma abordagem colaborativa e focada no desenvolvimento de projetos que unem conhecimento técnico e criatividade, o grupo busca transformar ideias em realidade, enfrentando desafios de forma estratégica e eficiente.</p>
+        </section>
+        <section>
             <h2>Italo Chiaradia</h2>
             <p>Sou Italo Chiaradia, apaixonado por tecnologia e sempre em busca de aprendizado e evolução. Gosto de enfrentar desafios que me ajudam a crescer, tanto no lado profissional quanto pessoal. 🚀</p>
         </section>
