--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
         </section>
         <section>
             <h2>Páginas de cada membro: </h2>
+            <a href="/src/members/caio-soares.html">Caio Soares</a>
+            <br>
             <a href="/src/members/italo-chiaradia.html">Italo Chiaradia</a>
             <br>
             <a href="/src/members/italo-ferreira.html">Italo Ferreira</a>
