--- a/src/members/caio-soares.html
+++ b/src/members/caio-soares.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caio Soares</title>
+    <title>INnovators | Caio Soares</title>
 </head>
 <body>
     <header>
         <h1>Caio Soares // Página Individual</h1>
-        <p>Voltar para a <a href="C:\Users\caiod\OneDrive\Documentos\estudos\javascript\tarefa-html\src\index.html">página inicial</a></p>
+        <p>Voltar para a <a href="/src/index.html">página inicial</a></p>
     </header>
     <main>
         <picture>
