--- a/src/members/italo-ferreira.html
+++ b/src/members/italo-ferreira.html
@@ -14,8 +14,7 @@
         <img src="/images/italo-ferreira.png" alt="foto" width="180px">
         <section>
             <h2>Sobre mim</h2>
-            <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar.</p>
-            <p>Estou sempre em busca de evolução, tanto pessoal quanto profissional.</p>
+            <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar. Sou apaixonado por tecnologia e inovação, e acredito que a busca constante por aprendizado é essencial para o crescimento. Estou sempre em busca de evolução, tanto pessoal quanto profissional, e adoro colaborar com pessoas que compartilham essa mesma paixão.</p>
         </section>
         <section>
             <h2>Meus hobbies:</h2>
