--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         </section>
         <section>
             <h2>Italo Ferreira</h2>
-            <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar. Estou sempre em busca de evolução, tanto pessoal quanto profissional.</p>
+            <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar. Sou apaixonado por tecnologia e inovação, e acredito que a busca constante por aprendizado é essencial para o crescimento. Estou sempre em busca de evolução, tanto pessoal quanto profissional, e adoro colaborar com pessoas que compartilham essa mesma paixão.</p>
         </section>
         <section>
             <h2>Páginas de cada membro: </h2>
