organiza paginas caio soares

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,16 @@
             <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar. Estou sempre em busca de evolução, tanto pessoal quanto profissional.</p>
         </section>
         <section>
+            <h2>Caio Soares</h2>
+            <p>Olá, meu nome é Caio, tenho dezoito anos e sou estudante de Sistemas de Informação na Universidade Federal FLUMINENSE.</p>
+        </section>
+        <section>
             <h2>Páginas de cada membro: </h2>
             <a href="/src/members/italo-chiaradia.html">Italo Chiaradia</a>
             <br>
             <a href="/src/members/italo-ferreira.html">Italo Ferreira</a>
             <br>
+            <a href="/src/members/caio-soares.html">Caio Soares</a>
         </section>
     </main>
     <hr>
