--- a/src/members/caio-soares.html
+++ b/src/members/caio-soares.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caio Soares</title>
+    <title>INnovators | Caio Soares</title>
 </head>
 <body>
     <header>
         <h1>Caio Soares // Página Individual</h1>
-        <p>Voltar para a <a href="C:\Users\caiod\OneDrive\Documentos\estudos\javascript\tarefa-html\src\index.html">página inicial</a></p>
+        <p>Voltar para a <a href="/src/index.html">página inicial</a></p>
     </header>
     <main>
         <picture>
-            <img src="C:\Users\caiod\OneDrive\Documentos\estudos\javascript\tarefa-html\images\caio-soares.jpg" alt="Foto de Caio Soares">
+            <img src="/images/caio-soares.jpg" alt="Foto de Caio Soares">
         </picture>
         <section>
             <p>
@@ -51,7 +51,7 @@
         <p>
             Minha página no <a href="https://github.com/caiodovalesoares" target="_blank">GitHub</a><br>
             Meu perfil no <a href="https://www.linkedin.com/in/caio-do-vale-soares-8960672ba/" target="_blank">LinkedIN</a><br>
-            <a href="C:\Users\caiod\OneDrive\Documentos\estudos\javascript\tarefa-html\src\pagina-individual\caio-soares\contato\index.html">Página de contato</a>
+            <a href="/src/members/contacts/caio-soares.html">Página de contato</a>
         </p>
     </footer>
 </body>
