--- a/src/members/contacts/caio-soares.html
+++ b/src/members/contacts/caio-soares.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contato - Caio Soares</title>
+    <title>INnovators | Fale com Caio Soares</title>
 </head>
 <body>
     <header>
         <h1>Contato // Caio Soares</h1>
         <p>
-            Voltar para a <a href="C:\Users\caiod\OneDrive\Documentos\estudos\javascript\tarefa-html\src\index.html">página principal</a> <br>
-            Voltar para a <a href="C:\Users\caiod\OneDrive\Documentos\estudos\javascript\tarefa-html\src\pagina-individual\caio-soares\index.html">minha página</a>
+            Voltar para a <a href="/src/index.html">página principal</a> <br>
+            Voltar para a <a href="/src/members/caio-soares.html">minha página</a>
         </p>
     </header>
     <main>
