--- a/src/members/italo-ferreira.html
+++ b/src/members/italo-ferreira.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>INnovators | Italo Ferreira</title>
 </head>
 <body>
     <header>
         <h1>Italo Ferreira</h1>
+        <!-- Link pro index -->
         <a href="/src/index.html">Voltar para página principal</a>
     </header>
     <main>
+        <!-- Imagens estão na pasta images -->
         <img src="/images/italo-ferreira.png" alt="foto" width="180px">
         <section>
             <h2>Sobre mim</h2>
@@ -37,6 +40,7 @@
             </ol>
         </section>
         <section>
+            <!-- Apenas de exemplo, não funcional -->
             <h2>Feedbacks:</h2>
             <form>
                 <input name="name" type="text" placeholder="Nome completo"><br>
@@ -47,8 +51,10 @@
     </main>
     <hr>
     <footer>
+        <!-- Rarkunho é nickname online -->
         <a href="https://github.com/Rarkunho" target="_blank">Meu GitHub</a><br>
         <a href="https://itch.io/profile/rarkunho">Minha página no Itch.io</a><br>
+        <!-- Página de contato -->
         <a href="/src/members/contacts/italo-ferreira.html">Entre em contato</a>
     </footer>
 </body>
