adiciona comentarios e modifica lang na tag html

--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Declaração do tipo de documento como HTML5 -->
+<html lang="pt-BR">
+
 <head>
+    <!-- Meta tags para configuração do documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INnovators | Home</title>
 </head>
+
 <body>
+    <!-- Cabeçalho da página -->
     <header>
-        <h1>INnovators 💡</h1>
+        <h1>INnovators 💡</h1> <!-- Título principal da página -->
     </header>
     <hr>
+
+    <!-- Conteúdo principal da página -->
     <main>
+        <!-- Seção sobre o grupo -->
         <section>
             <h2>Nosso grupo</h2>
-            <p>O <strong>INnovators</strong> é um grupo formado por jovens talentos apaixonados por tecnologia e inovação, com o objetivo de criar soluções criativas e impactantes. Com uma abordagem colaborativa e focada no desenvolvimento de projetos que unem conhecimento técnico e criatividade, o grupo busca transformar ideias em realidade, enfrentando desafios de forma estratégica e eficiente.</p>
+            <p>
+                O <strong>INnovators</strong> é um grupo formado por jovens talentos apaixonados por tecnologia e inovação, com o objetivo de criar soluções criativas e impactantes. Com uma abordagem colaborativa e focada no desenvolvimento de projetos que unem conhecimento técnico e criatividade, o grupo busca transformar ideias em realidade, enfrentando desafios de forma estratégica e eficiente.
+            </p>
         </section>
+
+        <!-- Seção sobre o membro Italo Chiaradia -->
         <section>
             <h2>Italo Chiaradia</h2>
-            <p>Sou Italo Chiaradia, apaixonado por tecnologia e sempre em busca de aprendizado e evolução. Gosto de enfrentar desafios que me ajudam a crescer, tanto no lado profissional quanto pessoal. 🚀</p>
+            <p>
+                Sou Italo Chiaradia, apaixonado por tecnologia e sempre em busca de aprendizado e evolução. Gosto de enfrentar desafios que me ajudam a crescer, tanto no lado profissional quanto pessoal. 🚀
+            </p>
         </section>
+
+        <!-- Seção sobre o membro Italo Ferreira -->
         <section>
             <h2>Italo Ferreira</h2>
-            <p>Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar. Sou apaixonado por tecnologia e inovação, e acredito que a busca constante por aprendizado é essencial para o crescimento. Estou sempre em busca de evolução, tanto pessoal quanto profissional, e adoro colaborar com pessoas que compartilham essa mesma paixão.</p>
+            <p>
+                Meu nome é Ítalo, e procuro sempre novos desafios e conhecimento em qualquer lugar. Sou apaixonado por tecnologia e inovação, e acredito que a busca constante por aprendizado é essencial para o crescimento. Estou sempre em busca de evolução, tanto pessoal quanto profissional, e adoro colaborar com pessoas que compartilham essa mesma paixão.
+            </p>
         </section>
+
+        <!-- Seção sobre o membro Caio Soares -->
         <section>
             <h2>Caio Soares</h2>
-            <p>Olá, meu nome é Caio, tenho dezoito anos e sou estudante de Sistemas de Informação na Universidade Federal FLUMINENSE.</p>
+            <p>
+                Olá, meu nome é Caio, tenho dezoito anos e sou estudante de Sistemas de Informação na Universidade Federal FLUMINENSE.
+            </p>
         </section>
+
+        <!-- Seção com links para as páginas individuais dos membros -->
         <section>
-            <h2>Páginas de cada membro: </h2>
+            <h2>Páginas de cada membro:</h2>
             <a href="/src/members/caio-soares.html">Caio Soares</a>
             <br>
             <a href="/src/members/italo-chiaradia.html">Italo Chiaradia</a>
@@ -38,9 +62,16 @@
         </section>
     </main>
     <hr>
+
+    <!-- Rodapé da página -->
     <footer>
         <h2>Transformando desafios em soluções</h2>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d918.7954638405051!2d-43.133932873649734!3d-22.906662305722964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817e444e692b%3A0xfd5e35fb577af2f5!2sUFF%20-%20Instituto%20de%20Computa%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1738599503190!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <!-- Incorporação de um mapa do Google Maps -->
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d918.7954638405051!2d-43.133932873649734!3d-22.906662305722964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99817e444e692b%3A0xfd5e35fb577af2f5!2sUFF%20-%20Instituto%20de%20Computa%C3%A7%C3%A3o!5e0!3m2!1spt-BR!2sbr!4v1738599503190!5m2!1spt-BR!2sbr"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe> <!-- Iframe para exibir o mapa -->
     </footer>
 </body>
 </html>
