--- a/src/members/contacts/italo-chiaradia.html
+++ b/src/members/contacts/italo-chiaradia.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INnovators | Fale com Italo Chiaradia</title>
 </head>
 <body>
+    <!-- Cabeçalho com título e links de navegação -->
     <header>
         <h1>Entre em Contato - Italo Chiaradia</h1>
         <a href="/src/index.html">Voltar para página principal</a><br>
@@ -13,6 +14,7 @@
     </header>
     <hr>
     <main>
+        <!-- Formulário de contato -->
         <form>
             <input name="name" type="text" placeholder="Nome"><br>
             <input name="email" type="email" placeholder="E-mail"><br>
@@ -20,10 +22,12 @@
             <textarea name="message" placeholder="Mensagem"></textarea>
             <input type="submit" value="Enviar">
         </form>
+        <!-- Vídeo incorporado do YouTube -->
         <iframe width="560" height="315" src="https://www.youtube.com/embed/T-PWDHoJLAQ" frameborder="0" allowfullscreen></iframe>
     </main>
     <hr>
     <footer>
+        <!-- Links para o GitHub e página inicial -->
         <a href="https://github.com/italo-ch" target="_blank">GitHub</a><br>
         <a href="/src/index.html">Voltar para página inicial</a>
     </footer>
