--- a/src/members/italo-chiaradia.html
+++ b/src/members/italo-chiaradia.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INnovators | Italo Chiaradia</title>
 </head>
 <body>
+    <!-- Cabeçalho da página com o nome e link para voltar à página principal -->
     <header>
         <h1>Italo Chiaradia</h1>
         <a href="/src/index.html">Voltar para página principal</a>
     </header>
     <hr>
     <main>
+        <!-- Seção sobre mim -->
         <section>
             <h2>Sobre mim</h2>
             <img src="/images/italo-chiaradia.jpg" alt="foto do italo chiaradia">
@@ -22,6 +24,7 @@
                 Acredito na importância da disciplina e do aprimoramento constante, tanto na vida profissional quanto pessoal. Gosto de desafios que me fazem crescer e estou sempre aberto a novas perspectivas. Seja estudando, programando ou simplesmente refletindo sobre o mundo, estou em busca de evolução. 🚀
             </p>
         </section>
+        <!-- Seção de hobbies -->
         <section>
             <h2>Hobbies: </h2>
             <ul>
@@ -32,6 +35,7 @@
                 <li>Estudar coisas novas</li>
             </ul>
         </section>
+        <!-- Seção de filmes favoritos -->
         <section>
             <h2>Top 5 filmes: </h2>
             <ol>
@@ -42,6 +46,7 @@
                 <li>Shrek 2</li>
             </ol>
         </section>
+        <!-- Seção de feedbacks -->
         <section>
             <h2>Feedbacks: </h2>
             <form>
@@ -53,6 +58,7 @@
     </main>
     <hr>
     <footer>
+        <!-- Links para o GitHub e página de contato -->
         <a href="https://github.com/italo-ch" target="_blank">GitHub</a><br>
         <a href="/src/members/contacts/italo-chiaradia.html">Entre em contato</a>
     </footer>
