--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         <section>
             <h2>Caio Soares</h2>
             <p>
-                Olá, meu nome é Caio, tenho dezoito anos e sou estudante de Sistemas de Informação na Universidade Federal FLUMINENSE.
+                Olá, meu nome é Caio, minha paixão é a inovação, explorando como a tecnologia pode ser aplicada para resolver desafios e melhorar processos. Estou sempre em busca de novas formas de usar a tecnologia para criar impacto positivo.
             </p>
         </section>
 
