--- a/src/members/caio-soares.html
+++ b/src/members/caio-soares.html
@@ -6,29 +6,29 @@
     <title>INnovators | Caio Soares</title>
 </head>
 <body>
-    <header>
+    <header> <!-- Cabeçalho da minha página individual -->
         <h1>Caio Soares // Página Individual</h1>
         <p>Voltar para a <a href="/src/index.html">página inicial</a></p>
     </header>
     <main>
-        <picture>
+        <picture> <!-- Uma foto minha -->
             <img src="/images/caio-soares.jpg" alt="Foto de Caio Soares">
         </picture>
         <section>
-            <p>
-                Olá, meu nome é Caio, tenho dezoito anos e sou estudante de Sistemas de Informação na Universidade Federal FLUMINENSE. Eu moro em Maricá, mas nasci no Rio de Janeiro e não sinto saudade nenhuma de lá (só do Maracanã). Sou uma pessoa muito sociável e curiosa, gosto bastante de conversar sobre assuntos que me interessam. Eu sei falar inglês e quero aprender outra língua (talvez Chinês), acho que isso vai me ajudar no futuro.
+            <p> <!-- Parágrafo de descrição -->
+                Olá, meu nome é Caio, tenho dezoito anos e sou estudante de Sistemas de Informação na Universidade Federal FLUMINENSE. Eu moro em Maricá, mas nasci no Rio de Janeiro e não sinto saudade nenhuma de lá (só do Maracanã). Sou uma pessoa muito sociável e curiosa, gosto bastante de conversar sobre assuntos que me interessam. Eu sei falar inglês e quero aprender outra língua (talvez Chinês), me interesso muito por novos países e idiomas.
             </p>
         </section>
-        <section>
+        <section> <!-- Hobbies -->
             <h2>Hobbies</h2>
             <ul>
-                <li>Jogar bola</li>
+                <li>Jogar bola e academia</li>
                 <li>Ver séries, animes e filmes</li>
                 <li>Ir no Maracanã ver o Fluminense jogar</li>
                 <li>Ouvir música</li>
                 <li>Sair com a minha namorada</li>
             </ul>
-
+            <!-- Top 5 cantores preferidos -->
             <h2>Top 5 cantores favoritos</h2>
             <ol>
                 <li>Drake</li>
@@ -39,7 +39,7 @@
             </ol>
         </section>
         <section>
-            <form>
+            <form> <!-- Área de feedback -->
                 <h2>Feedbacks</h2>
                 <input type="text" placeholder="Nome completo"><br><br>
                 <textarea placeholder="Feedback" style="resize: none;"></textarea><br>
@@ -48,7 +48,7 @@
         </section>
     </main>
     <footer>
-        <p>
+        <p> <!-- Rodapé com links -->
             Minha página no <a href="https://github.com/caiodovalesoares" target="_blank">GitHub</a><br>
             Meu perfil no <a href="https://www.linkedin.com/in/caio-do-vale-soares-8960672ba/" target="_blank">LinkedIN</a><br>
             <a href="/src/members/contacts/caio-soares.html">Página de contato</a>
