--- a/src/members/contacts/caio-soares.html
+++ b/src/members/contacts/caio-soares.html
@@ -6,7 +6,7 @@
     <title>INnovators | Fale com Caio Soares</title>
 </head>
 <body>
-    <header>
+    <header> <!-- Cabeçalho da minha página de contato -->
         <h1>Contato // Caio Soares</h1>
         <p>
             Voltar para a <a href="/src/index.html">página principal</a> <br>
@@ -14,7 +14,7 @@
         </p>
     </header>
     <main>
-        <form>
+        <form> <!-- Formulário -->
             <h2>Formulário</h2>
             <input type="text" placeholder="Nome"> <br> <br>
             <input type="text" placeholder="E-mail"> <br> <br>
@@ -22,11 +22,11 @@
             <textarea placeholder="Mensagem" style="resize: none;"></textarea> <br>
             <button>Enviar</button>
         </form>
-        <h2>Vídeo</h2>
+        <h2>Vídeo</h2> <!-- Vídeo interessante (Melhor dia da minha vida) -->
         <p><iframe width="560" height="315" src="https://www.youtube.com/embed/5nQM-i3awJ4?si=ptbIe5S9vhGylYbd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
     </main>
     <footer>
-        <p>
+        <p> <!-- Links -->
             Minha página no <a href="https://github.com/caiodovalesoares" target="_blank">GitHub</a><br>
             Meu perfil no <a href="https://www.linkedin.com/in/caio-do-vale-soares-8960672ba/" target="_blank">LinkedIN</a><br>
         </p>
