--- a/src/members/italo-ferreira.html
+++ b/src/members/italo-ferreira.html
@@ -53,7 +53,7 @@
     <footer>
         <!-- Rarkunho é nickname online -->
         <a href="https://github.com/Rarkunho" target="_blank">Meu GitHub</a><br>
-        <a href="https://itch.io/profile/rarkunho">Minha página no Itch.io</a><br>
+        <a href="https://itch.io/profile/rarkunho" target="_blank">Minha página no Itch.io</a><br>
         <!-- Página de contato -->
         <a href="/src/members/contacts/italo-ferreira.html">Entre em contato</a>
     </footer>
