--- a/src/index.html
+++ b/src/index.html
@@ -51,15 +51,15 @@
         </section>
 
         <!-- Seção com links para as páginas individuais dos membros -->
-        <section>
-            <h2>Páginas de cada membro:</h2>
-            <a href="/src/members/caio-soares.html">Caio Soares</a>
-            <br>
-            <a href="/src/members/italo-chiaradia.html">Italo Chiaradia</a>
-            <br>
-            <a href="/src/members/italo-ferreira.html">Italo Ferreira</a>
-            <br>
-        </section>
+            <nav>
+                <h2>Páginas de cada membro:</h2>
+                <a href="/src/members/caio-soares.html">Caio Soares</a>
+                <br>
+                <a href="/src/members/italo-chiaradia.html">Italo Chiaradia</a>
+                <br>
+                <a href="/src/members/italo-ferreira.html">Italo Ferreira</a>
+                <br>
+            </nav>
     </main>
     <hr>
 
