--- a/src/members/caio-soares.html
+++ b/src/members/caio-soares.html
@@ -48,11 +48,13 @@
         </section>
     </main>
     <footer>
-        <p> <!-- Rodapé com links -->
-            Minha página no <a href="https://github.com/caiodovalesoares" target="_blank">GitHub</a><br>
-            Meu perfil no <a href="https://www.linkedin.com/in/caio-do-vale-soares-8960672ba/" target="_blank">LinkedIN</a><br>
-            <a href="/src/members/contacts/caio-soares.html">Página de contato</a>
-        </p>
+        <nav>
+            <p> <!-- Rodapé com links -->
+                Minha página no <a href="https://github.com/caiodovalesoares" target="_blank">GitHub</a><br>
+                Meu perfil no <a href="https://www.linkedin.com/in/caio-do-vale-soares-8960672ba/" target="_blank">LinkedIN</a><br>
+                <a href="/src/members/contacts/caio-soares.html">Página de contato</a>
+            </p>
+        </nav>
     </footer>
 </body>
 </html>
