--- a/src/members/contacts/caio-soares.html
+++ b/src/members/contacts/caio-soares.html
@@ -8,10 +8,12 @@
 <body>
     <header> <!-- Cabeçalho da minha página de contato -->
         <h1>Contato // Caio Soares</h1>
-        <p>
-            Voltar para a <a href="/src/index.html">página principal</a> <br>
-            Voltar para a <a href="/src/members/caio-soares.html">minha página</a>
-        </p>
+        <nav>
+            <p>
+                Voltar para a <a href="/src/index.html">página principal</a> <br>
+                Voltar para a <a href="/src/members/caio-soares.html">minha página</a>
+            </p>
+        </nav>
     </header>
     <main>
         <form> <!-- Formulário -->
@@ -26,10 +28,12 @@
         <p><iframe width="560" height="315" src="https://www.youtube.com/embed/5nQM-i3awJ4?si=ptbIe5S9vhGylYbd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
     </main>
     <footer>
-        <p> <!-- Links -->
-            Minha página no <a href="https://github.com/caiodovalesoares" target="_blank">GitHub</a><br>
-            Meu perfil no <a href="https://www.linkedin.com/in/caio-do-vale-soares-8960672ba/" target="_blank">LinkedIN</a><br>
-        </p>
+        <nav>
+            <p> <!-- Links -->
+                Minha página no <a href="https://github.com/caiodovalesoares" target="_blank">GitHub</a><br>
+                Meu perfil no <a href="https://www.linkedin.com/in/caio-do-vale-soares-8960672ba/" target="_blank">LinkedIN</a>
+            </p>
+        </nav>
     </footer>
 </body>
 </html>
