conserta erro da página principal e links

--- a/src/members/caio-soares.html
+++ b/src/members/caio-soares.html
@@ -8,7 +8,7 @@
 <body>
     <header> <!-- Cabeçalho da minha página individual -->
         <h1>Caio Soares // Página Individual</h1>
-        <p>Voltar para a <a href="/src/index.html">página inicial</a></p>
+        <p>Voltar para a <a href="/">página inicial</a></p>
     </header>
     <main>
         <picture> <!-- Uma foto minha -->
