--- a/src/members/contacts/caio-soares.html
+++ b/src/members/contacts/caio-soares.html
@@ -10,7 +10,7 @@
         <h1>Contato // Caio Soares</h1>
         <nav>
             <p>
-                Voltar para a <a href="/src/index.html">página principal</a> <br>
+                Voltar para a <a href="/">página principal</a> <br>
                 Voltar para a <a href="/src/members/caio-soares.html">minha página</a>
             </p>
         </nav>
