--- a/src/members/contacts/italo-chiaradia.html
+++ b/src/members/contacts/italo-chiaradia.html
@@ -9,7 +9,7 @@
     <!-- Cabeçalho com título e links de navegação -->
     <header>
         <h1>Entre em Contato - Italo Chiaradia</h1>
-        <a href="/src/index.html">Voltar para página principal</a><br>
+        <a href="/">Voltar para página principal</a><br>
         <a href="/src/members/italo-chiaradia.html">Voltar para página individual do membro</a>
     </header>
     <hr>
@@ -29,7 +29,7 @@
     <footer>
         <!-- Links para o GitHub e página inicial -->
         <a href="https://github.com/italo-ch" target="_blank">GitHub</a><br>
-        <a href="/src/index.html">Voltar para página inicial</a>
+        <a href="/">Voltar para página inicial</a>
     </footer>
 </body>
 </html>
