--- a/src/members/contacts/italo-ferreira.html
+++ b/src/members/contacts/italo-ferreira.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Entre em Contato - Italo Ferreira</h1>
-        <a href="/src/index.html">Voltar para página principal</a><br>
+        <a href="/">Voltar para página principal</a><br>
         <a href="/src/members/italo-ferreira.html">Voltar para página individual</a>
     </header>
     <main>
@@ -26,7 +26,7 @@
     <hr>
     <footer>
         <a href="https://github.com/Rarkunho" target="_blank">Meu GitHub</a><br>
-        <a href="/src/index.html">Voltar para página inicial</a>
+        <a href="/">Voltar para página inicial</a>
     </footer>
 </body>
 </html>
