--- a/src/members/italo-chiaradia.html
+++ b/src/members/italo-chiaradia.html
@@ -9,7 +9,7 @@
     <!-- Cabeçalho da página com o nome e link para voltar à página principal -->
     <header>
         <h1>Italo Chiaradia</h1>
-        <a href="/src/index.html">Voltar para página principal</a>
+        <a href="/">Voltar para página principal</a>
     </header>
     <hr>
     <main>
