--- a/src/members/italo-ferreira.html
+++ b/src/members/italo-ferreira.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Italo Ferreira</h1>
         <!-- Link pro index -->
-        <a href="/src/index.html">Voltar para página principal</a>
+        <a href="/">Voltar para página principal</a>
     </header>
     <main>
         <!-- Imagens estão na pasta images -->
